feat(ui): 🧑‍💻 Adiciona seção de autores no rodapé da aplicação

--- a/index.html
+++ b/index.html
@@ -228,6 +228,31 @@
                         </button>
                     </div>
                 </main>
+                <footer class="mt-12 border-t border-gray-700 pt-8">
+                    <h3 class="text-xl font-bold text-center text-gray-400 mb-8">Desenvolvido por</h3>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+
+                        <div class="flex flex-col items-center text-center">
+                            <img src="https://github.com/skyzinha-chan/Criador-de-Mini-Jogos-Didaticos/blob/main/assets/talita-mendonca.jpg?raw=true"
+                                alt="Foto de Talita Mendonça Marques"
+                                class="w-32 h-32 rounded-full object-cover mb-4 border-2 border-gray-600">
+                            <h4 class="font-bold text-lg text-white">Talita Mendonça Marques</h4>
+                            <p class="text-sm text-gray-400">Licenciatura em Ciência da Computação</p>
+                            <p class="text-xs text-gray-500">Instituto Federal de Mato Grosso do Sul</p>
+                        </div>
+
+                        <div class="flex flex-col items-center text-center">
+                            <img src="https://github.com/skyzinha-chan/Criador-de-Mini-Jogos-Didaticos/blob/main/assets/leonardo-vinicius.jpg?raw=true"
+                                alt="Foto de Leonardo Vinicius"
+                                class="w-32 h-32 rounded-full object-cover mb-4 border-2 border-gray-600">
+                            <h4 class="font-bold text-lg text-white">Leonardo Vinicius da Costa Gomes</h4>
+                            <p class="text-sm text-gray-400">Licenciatura em Ciência da Computação</p>
+                            <p class="text-xs text-gray-500">Instituto Federal de Mato Grosso do Sul</p>
+                        </div>
+
+                    </div>
+                </footer>
+
             </div>
 
             <!-- ECRÃ DO JOGO -->
