feat: add feedback page with interactive elements and audio feedback
refactor: update index.html to include global footer and navigation links

feat: create common.js for shared logic across pages, including footer rendering

chore: enhance data.js with additional themes and developer information

feat: implement feedback.js for handling user interactions on feedback page

refactor: modify main.js to utilize common.js for improved structure

refactor: update mecanicas.js to use common.js for consistency

feat: create regras.js for game rules functionality and UI

feat: add tema.js for theme selection and display logic

feat: create regras.html for game rules interface

feat: create tema.html for theme selection interface

refactor: update ui.js to streamline UI initialization process

--- a/index.html
+++ b/index.html
@@ -69,11 +69,7 @@
                             </button>
                         </div>
                     </main>
-                    <footer class="mt-12 border-t border-gray-700 pt-8">
-                        <h3 class="text-xl font-bold text-center text-gray-400 mb-8">Desenvolvido por</h3>
-                        <!-- Os cards dos desenvolvedores serão inseridos aqui pelo ui.js -->
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-10"></div>
-                    </footer>
+
                 </div>
 
                 <!-- TELA DO JOGO -->
@@ -94,6 +90,16 @@
             </div>
         </main>
 
+        <!-- FOOTER GLOBAL -->
+        <footer class="w-full bg-gray-800 border-t border-gray-700 py-8 mt-auto">
+            <div class="container mx-auto px-6">
+                <h3 class="text-xl font-bold text-center text-gray-400 mb-8">Desenvolvido por</h3>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-10 max-w-3xl mx-auto">
+                    <!-- Os cards dos desenvolvedores serão inseridos aqui pelo ui.js -->
+                </div>
+            </div>
+        </footer>
+
         <!-- Overlay do Menu -->
         <div id="menu-overlay" class="overlay"></div>
 
@@ -110,13 +116,15 @@
                 </button>
             </div>
             <nav class="flex flex-col space-y-2">
-                <a href="index.html" class="block py-2 px-4 rounded-md text-blue-400 bg-gray-700">Criador Interativo</a>
+                <a href="index.html" class="block py-2 px-4 rounded-md text-blue-400 bg-gray-700">Página Principal
+                </a>
+                <a href="tema.html" class="block py-2 px-4 rounded-md text-gray-300 hover:bg-gray-700">Pilar: Tema</a>
                 <a href="mecanicas.html" class="block py-2 px-4 rounded-md text-gray-300 hover:bg-gray-700">Pilar:
                     Mecânicas</a>
-                <a href="#" class="block py-2 px-4 rounded-md text-gray-500 cursor-not-allowed">Pilar: Regras (Em
-                    breve)</a>
-                <a href="#" class="block py-2 px-4 rounded-md text-gray-500 cursor-not-allowed">Pilar: Feedback (Em
-                    breve)</a>
+                <a href="regras.html" class="block py-2 px-4 rounded-md text-gray-300 hover:bg-gray-700">Pilar:
+                    Regras</a>
+                <a href="feedback.html" class="block py-2 px-4 rounded-md text-gray-300 hover:bg-gray-700">Pilar:
+                    Feedback</a>
             </nav>
         </aside>
 
