--- a/tema.html
+++ b/tema.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pilar: Mecânicas de Jogo</title>
+        <title>Pilar: Tema do Jogo</title>
         <script src="https://cdn.tailwindcss.com"></script>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
@@ -21,61 +21,42 @@
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                             xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M4 6h16M4 12h16m-7 6h7">
-                            </path>
+                                d="M4 6h16M4 12h16m-7 6h7"></path>
                         </svg>
                     </button>
                 </div>
             </nav>
         </header>
 
+        <!-- Conteúdo Principal -->
         <main class="flex-grow container mx-auto p-6 md:p-8">
             <div class="text-center mb-8">
-                <h1 class="text-4xl font-bold text-green-400">Pilar 2: Mecânicas de Jogo</h1>
-                <p class="mt-2 text-lg text-gray-300">As ações, os "verbos" do jogo. Como o jogador interage com o
-                    mundo?</p>
+                <h1 class="text-4xl font-bold text-blue-400">Pilar 1: Tema (Engajamento)</h1>
+                <p class="mt-2 text-lg text-gray-300">O coração do jogo. Qual é a história ou o objetivo que cativa o
+                    jogador?</p>
             </div>
 
             <div class="bg-gray-800 p-6 rounded-2xl shadow-2xl">
-                <h2 class="text-2xl font-semibold mb-4 text-center">Atividade: Organize as Mecânicas</h2>
-                <p class="text-center text-gray-400 mb-6">Arraste cada mecânica para a categoria que você acha que ela
-                    pertence.</p>
+                <h2 class="text-2xl font-semibold mb-4 text-center">Atividade: Adivinhe o Tema</h2>
+                <p class="text-center text-gray-400 mb-6">Clique nos temas abaixo para revelar um exemplo de jogo. O
+                    tema conecta a mecânica a um propósito.</p>
 
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                    <!-- Drop Zones (Categorias) -->
-                    <div class="drop-zone bg-gray-900 p-4 rounded-lg border-2 border-dashed border-gray-700"
-                        data-category="cognitiva">
-                        <h3 class="font-bold text-lg text-center mb-2">🧠 Cognitivas</h3>
-                        <p class="text-xs text-center text-gray-500 mb-4">(Foco em pensar e resolver)</p>
-                    </div>
-                    <div class="drop-zone bg-gray-900 p-4 rounded-lg border-2 border-dashed border-gray-700"
-                        data-category="motora">
-                        <h3 class="font-bold text-lg text-center mb-2">🏃‍♀️ Motoras</h3>
-                        <p class="text-xs text-center text-gray-500 mb-4">(Foco em agilidade e precisão)</p>
-                    </div>
-                    <div class="drop-zone bg-gray-900 p-4 rounded-lg border-2 border-dashed border-gray-700"
-                        data-category="social">
-                        <h3 class="font-bold text-lg text-center mb-2">🤝 Sociais</h3>
-                        <p class="text-xs text-center text-gray-500 mb-4">(Foco em cooperação ou competição)</p>
-                    </div>
+                <div id="theme-options" class="flex justify-center flex-wrap gap-4 mb-8">
+                    <button data-theme="Tabuada"
+                        class="theme-button bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition-colors">Tabuada</button>
+                    <button data-theme="Capitais"
+                        class="theme-button bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition-colors">Capitais</button>
+                    <button data-theme="Ciclo da Água"
+                        class="theme-button bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition-colors">Ciclo
+                        da Água</button>
                 </div>
 
-                <hr class="border-gray-700 my-6">
-
-                <!-- Draggable Cards (Mecânicas) -->
-                <div id="card-container" class="flex flex-wrap justify-center gap-4">
-                    <div class="card bg-green-600 p-3 rounded-lg cursor-grab" draggable="true"
-                        data-category="cognitiva">Resolução de Puzzles</div>
-                    <div class="card bg-green-600 p-3 rounded-lg cursor-grab" draggable="true" data-category="motora">
-                        Pular Plataformas</div>
-                    <div class="card bg-green-600 p-3 rounded-lg cursor-grab" draggable="true" data-category="social">
-                        Troca de Itens</div>
-                    <div class="card bg-green-600 p-3 rounded-lg cursor-grab" draggable="true"
-                        data-category="cognitiva">Gerenciar Recursos</div>
-                    <div class="card bg-green-600 p-3 rounded-lg cursor-grab" draggable="true" data-category="social">
-                        Votação em Grupo</div>
-                    <div class="card bg-green-600 p-3 rounded-lg cursor-grab" draggable="true" data-category="motora">
-                        Desviar de Obstáculos</div>
+                <div id="theme-display"
+                    class="relative w-full h-80 bg-gray-900 rounded-lg border-2 border-gray-700 flex items-center justify-center p-4 text-center transition-opacity duration-500 opacity-0">
+                    <div id="theme-content">
+                        <h3 id="theme-title" class="text-2xl font-bold text-yellow-400 mb-2"></h3>
+                        <p id="theme-description" class="text-gray-300"></p>
+                    </div>
                 </div>
             </div>
         </main>
@@ -85,15 +66,12 @@
             <div class="container mx-auto px-6">
                 <h3 class="text-xl font-bold text-center text-gray-400 mb-8">Desenvolvido por</h3>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-10 max-w-3xl mx-auto">
-                    <!-- Os cards dos desenvolvedores serão inseridos aqui pelo ui.js -->
                 </div>
             </div>
         </footer>
 
-        <!-- Overlay do Menu -->
+        <!-- Overlay e Sidebar do Menu -->
         <div id="menu-overlay" class="overlay"></div>
-
-        <!-- Menu Lateral (Sidebar) -->
         <aside id="sidebar-menu" class="sidebar">
             <div class="flex justify-between items-center mb-8">
                 <h2 class="text-2xl font-bold">Navegação</h2>
@@ -118,7 +96,7 @@
             </nav>
         </aside>
 
-        <script type="module" src="js/mecanicas.js"></script>
+        <script type="module" src="js/tema.js"></script>
     </body>
 
 </html>
