--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
                                 🎮 Construir Protótipo do Jogo 🕹️!
                             </button>
                         </div>
+                        <!-- Botão para o Modo Professor -->
+                        <div class="mt-6 text-center">
+                            <button id="teacher-mode-btn"
+                                class="w-full md:w-auto bg-purple-600 text-white font-bold py-2 px-6 rounded-lg shadow-md hover:bg-purple-700 transition-all">
+                                Modo Professor 🧑‍🏫
+                            </button>
+                        </div>
                     </main>
 
                 </div>
@@ -119,6 +126,50 @@
                 </div>
             </div>
         </footer>
+
+        <!-- Modal do Modo Professor -->
+        <div id="teacher-modal-overlay" class="teacher-modal-overlay hidden"></div>
+        <div id="teacher-modal" class="teacher-modal hidden">
+            <div class="flex justify-between items-center mb-6">
+                <h2 class="text-2xl font-bold text-purple-400">Modo Professor</h2>
+                <button id="close-teacher-modal-btn" class="text-gray-400 hover:text-white">&times;</button>
+            </div>
+
+            <!-- Seção de Adicionar Tema -->
+            <div class="bg-gray-900 p-4 rounded-lg mb-6">
+                <h3 class="text-lg font-semibold mb-2">Adicionar Novo Tema</h3>
+                <div class="flex gap-2">
+                    <input type="text" id="new-theme-name" placeholder="Nome do Tema (ex: Tabela Periódica)"
+                        class="w-full bg-gray-800 p-2 rounded-lg text-white">
+                    <button id="save-theme-btn"
+                        class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg">Salvar</button>
+                </div>
+            </div>
+
+            <!-- Seção de Adicionar Pergunta -->
+            <div class="bg-gray-900 p-4 rounded-lg">
+                <h3 class="text-lg font-semibold mb-2">Adicionar Nova Pergunta</h3>
+                <div class="space-y-3">
+                    <select id="question-theme-select" class="w-full bg-gray-800 p-2 rounded-lg text-white">
+                        <option>Selecione um tema</option>
+                    </select>
+                    <input type="text" id="new-question-text" placeholder="Texto da pergunta"
+                        class="w-full bg-gray-800 p-2 rounded-lg text-white">
+                    <input type="text" id="new-question-answer" placeholder="Resposta Correta"
+                        class="w-full bg-green-900 p-2 rounded-lg text-white">
+                    <input type="text" id="new-question-option1" placeholder="Opção Incorreta 1"
+                        class="w-full bg-red-900 p-2 rounded-lg text-white">
+                    <input type="text" id="new-question-option2" placeholder="Opção Incorreta 2"
+                        class="w-full bg-red-900 p-2 rounded-lg text-white">
+                    <input type="text" id="new-question-option3" placeholder="Opção Incorreta 3"
+                        class="w-full bg-red-900 p-2 rounded-lg text-white">
+                    <button id="save-question-btn"
+                        class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg">Salvar
+                        Pergunta</button>
+                </div>
+            </div>
+            <p id="teacher-modal-feedback" class="text-center mt-4 h-5 text-green-400"></p>
+        </div>
 
         <!-- Overlay do Menu -->
         <div id="menu-overlay" class="overlay"></div>
